Applied fix for hamburger menu bar close function not going back all the way to the top. Applied fix for width on small screens not displaying correctly on the contact page

--- a/style/contact.scss
+++ b/style/contact.scss
@@ -4,6 +4,7 @@
 background: #F3904F;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #3B4371, #F3904F);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #3B4371, #F3904F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 
@@ -105,22 +106,22 @@ background: linear-gradient(to right, #3B4371, #F3904F); /* W3C, IE 10+/ Edge, F
 }
 
 /* address, locale */
-#fs-frm fieldset.locale input[name="city"],
-#fs-frm fieldset.locale select[name="state"],
-#fs-frm fieldset.locale input[name="postal-code"] {
-  display: inline;
-}
-#fs-frm fieldset.locale input[name="city"] {
-  width: 52%;
-}
-#fs-frm fieldset.locale select[name="state"],
-#fs-frm fieldset.locale input[name="postal-code"] {
-  width: 20%;
-}
-#fs-frm fieldset.locale input[name="city"],
-#fs-frm fieldset.locale select[name="state"] {
-  margin-right: 3%;
-}
+// #fs-frm fieldset.locale input[name="city"],
+// #fs-frm fieldset.locale select[name="state"],
+// #fs-frm fieldset.locale input[name="postal-code"] {
+//   display: inline;
+// }
+// #fs-frm fieldset.locale input[name="city"] {
+//   width: 52%;
+// }
+// #fs-frm fieldset.locale select[name="state"],
+// #fs-frm fieldset.locale input[name="postal-code"] {
+//   width: 20%;
+// }
+// #fs-frm fieldset.locale input[name="city"],
+// #fs-frm fieldset.locale select[name="state"] {
+//   margin-right: 3%;
+// }
 
 #fs-frm label{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -133,8 +134,13 @@ background: linear-gradient(to right, #3B4371, #F3904F); /* W3C, IE 10+/ Edge, F
 }
 // Decrease form and text size for smaller screen sizes
 @media (max-width:650px){
-      #fs-frm textarea{
-      width: 80%;
+  #fs-frm input,
+  #fs-frm select,
+  #fs-frm textarea,
+  #fs-frm fieldset,
+  #fs-frm optgroup,
+  #fs-frm #card-element:disabled{
+      width: 70vw;
        }
 
        #fs-frm label{
